--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keyword" content="Clone, Instagram, WebDeveloper">
 
     <link rel="stylesheet" href="css/style.css">
-    <title>Instagram - Clone </title>
+    <title> Instagram - Clone </title>
 </head>
 <body>
     <div class="instagram-wrapper">
@@ -20,11 +20,11 @@
                 <div class="profile-photo">
                     <img src="image/imagem-perfil.jpg" alt="Foto de Perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue as mewmew</a>
+                <a href="#" class="instagram-login">Continue as mewmewdevart</a>
                 <a href="#" class="instagram-logout">Remover Account</a>
             </div>
             <div class="group">
-                <p class="not-account">Not Mewmewdevart?</p>
+                <p class="not-account">Not mewmewdevart?</p>
                 <p class="not-account">
                     <span class="link-blue">Switch Accounts</span>
                     or 
