new folder assets for archives

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-widthm, initial-scale=1.0">
     <meta name="keyword" content="Clone, Instagram, WebDeveloper">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title> Instagram - Clone </title>
 </head>
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="image/instagram-celular.png" alt="" class="Foto do celular logado no Instagram">
+            <img src="assets/image/instagram-celular.png" alt="" class="Foto do celular logado no Instagram">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="image/instagram-logo.png" class="instagram-logo" alt="Logo do Instagram" >
+                <img src="assets/image/instagram-logo.png" class="instagram-logo" alt="Logo do Instagram" >
                 <div class="profile-photo">
-                    <img src="image/imagem-perfil.jpg" alt="Foto de Perfil">
+                    <img src="assets/image/imagem-perfil.jpg" alt="Foto de Perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue as mewmewdevart</a>
                 <a href="#" class="instagram-logout">Remover Account</a>
